@@ -54,8 +54,10 @@ Drupal 7.50, xxxx-xx-xx (development version)
   menu link form from 128 to 255 characters.
 - Avoid re-scanning of module directory when a filename or a module is missing.
 - Fixed ajax handling for tableselect form elements that use checkboxes.
-- Fixed that URL generation only worked on port 80 when using domain based
+- Fixed that URL generation only works on port 80 when using domain based
   language negotation.
+- Fixed Drupal 7.36 regression: hidden field textarea #default_value is
+  ignored.
 
 Drupal 7.44, 2016-06-15
 -----------------------
